<resources>
    <string name="app_name">Alumify</string>
    <string name="forget_password"><u>Forget Password?</u></string>
    <string name="terms_amp_conditions"><u><![CDATA[terms & conditions]]></u></string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="signup">Sign up</string>
    <string name="login"><u>Login</u></string>
    <string name="default_web_client_id">default_web_client_id</string>
    <string name="reset_via_phone_number_when_already_logged_in_nelse_use_email_to_reset_password"><u>Reset via Phone number when already logged in \nelse use email to reset password</u></string>
    <string name="_0">0</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="change_password">Change Password</string>
    <string name="title">Title</string>
    <string name="this_is_a_custom_dialog_message">This is a custom dialog message.</string>
    <string name="enter_your_details">Enter your details</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="tod">TODO</string>
    <string name="send_otp">Send OTP</string>
    <string name="enter_number">Enter Number</string>
    <string name="verify_phone_number_to_start_messaging">Verify Phone Number to start messaging</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_details"><u>Personal Details</u></string>
    <string name="proffesional_details"><u>proffesional details</u></string>
    <string name="open_drawer" />
    <string name="close_drawer" />

</resources>